--- a/AP02_Advanced_Data_Preparation_and_EDA.ipynb
+++ b/AP02_Advanced_Data_Preparation_and_EDA.ipynb
@@ -40,7 +40,7 @@
     "  </tr>\n",
     "  <tr>\n",
     "    <td>Prüfungsdatum / Raum / Zeit:</td>\n",
-    "    <td>11.11.2024 / Raum: SF O3.54 / 8:00 – 11:45</td>\n",
+    "    <td>10.11.2025 / Raum: MU O2.001 / 8:00 – 11:45</td>\n",
     "  </tr>\n",
     "  <tr>\n",
     "    <td>Erlaubte Hilfsmittel:</td>\n",
@@ -60,7 +60,7 @@
    "source": [
     "## Bewertungskriterien\n",
     "\n",
-    "### <b style=\"color: gray;\">(max. erreichbare Punkte: 48)</b>\n",
+    "### <b style=\"color: gray;\">(max. erreichbare Punkte: 40)</b>\n",
     "\n",
     "<table>\n",
     "  <thead>\n",
@@ -163,8 +163,8 @@
    "metadata": {},
    "source": [
     "## <b>Aufgaben (Dieser Teil wird bewertet!)</b>\n",
-    "<b style=\"color:blue;\">Hinweise zu den folgenden Aufgabenstellungen:</b>\n",
-    "<ul style=\"color:blue;\">\n",
+    "<b>Hinweise zu den folgenden Aufgabenstellungen:</b>\n",
+    "<ul>\n",
     "  <li>Beachten Sie auch die zu jeder Aufgabenstellung zugehörenden Details zu Aufgabenstellung.</li>\n",
     "  <li>Lösen Sie jede Aufgabe mit Hilfe von Python Code. Integrieren Sie den Python Code in die Code-Zellen der jeweiligen Aufgabe.</li>\n",
     "  <li>Stellen Sie die Lösung(en) jeder Aufgabe ganz oder in Teilen (z.B. erste 5 Zeilen) eines DataFrames im Jupyter Notebook dar.</li>\n",
@@ -177,13 +177,11 @@
    "id": "6033f466",
    "metadata": {},
    "source": [
-    "#### <b>Aufgabe (1): Lesen Sie den Datensatz 'smartphone_data.csv' aus dem Order 'Data' ein, und speichern Sie diesen in einem pandas DataFrame.</b>\n",
+    "#### <b>Aufgabe (1): Lesen Sie den Datensatz 'bicycle_data.json' aus dem Order 'Data' ein, und speichern Sie diesen in einem pandas DataFrame.</b>\n",
     "<b>Details zur Aufgabenstellung:</b>\n",
     "- Zeigen Sie die Dimension des DataFrames (Zeilen und Spalten) im Jupyter Notebook an.\n",
     "- Zeigen Sie die Datentypen sämtlicher Spalten des DataFrames im Jupyter Notebook an.\n",
-    "- Zeigen Sie die ersten Zeilen des DataFrames im Jupyter Notebook an.<br><br>\n",
-    "\n",
-    "- Tipp: Berücksichtigen Sie den Pfad der Ablage der Daten im Ordner Data ('./Data/smartphone_data.csv').\n",
+    "- Zeigen Sie die ersten Zeilen des DataFrames im Jupyter Notebook an.\n",
     "\n",
     "<b style=\"color: gray;\">(max. erreichbare Punkte: 4)</b>"
    ]
@@ -195,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Einlesen der Daten 'smartphone_data.csv' aus dem Order 'Data' in ein DataFrame 'df'\n",
+    "# Einlesen der Daten aus dem Order 'Data' in ein DataFrame 'df'\n",
     "\n",
     "\n",
     "# Anzeigen der Dimension des DataFrames (Zeilen und Spalten)\n",
@@ -212,20 +210,22 @@
    "id": "1ecba494",
    "metadata": {},
    "source": [
-    "<div style=\"background-color: #F0EAD6;\">\n",
+    "<div>\n",
     "\n",
     "#### <b> Hinweis! \n",
     "\n",
-    "#### Falls Sie den Datensatz 'smartphone_data.csv' nicht einlesen konnten, verwenden Sie die SQLite DB 'smartphone_data.db' im Order 'Data'.</b>\n",
+    "#### Falls Sie den Datensatz 'bicycle_data.json' nicht einlesen konnten, verwenden Sie die SQLite DB 'bicycle_data.db' im Order 'Data'.</b>\n",
     "\n",
-    "#### <b> Der folgende Python-Code liesst die Daten aus der SQLite DB in ein pandas DataFrame mit dem Namen 'df'.</b>\n",
+    "#### <b>Der folgende Python-Code liesst die Daten aus der SQLite DB in ein pandas DataFrame mit dem Namen 'df'.</b>\n",
+    "\n",
+    "#### <b>Erstellen Sie dazu im Jupyter Notebook eine neue Code-Zelle unter dieser Markdown-Zelle und lassen den Code laufen.</b>\n",
     "\n",
     "```python\n",
     "# Engine für Datenbankverbindung erstellen\n",
-    "engine = create_engine('sqlite:///./Data/smartphone_data.db')\n",
+    "engine = create_engine('sqlite:///./Data/bicycle_data.db')\n",
     "\n",
     "# SQL Abfrage\n",
-    "df = pd.read_sql_query(\"\"\"SELECT * FROM smartphone_data\"\"\",\n",
+    "df = pd.read_sql_query(\"\"\"SELECT * FROM bicycle_data\"\"\",\n",
     "                          con=engine)\n",
     "\n",
     "# Schliessen der Datenbankverbindung\n",
@@ -246,27 +246,101 @@
     "<b>Details zur Aufgabenstellung:</b>\n",
     "- Extrahieren Sie die numerischen Werte der folgenden Variablen, und speichern Sie diese in separaten Variablen ab:\n",
     "  - price_raw\n",
-    "  - camera_resolution_raw\n",
+    "  - gear_count_raw\n",
     "  - battery_life_raw\n",
-    "  - storage_size_raw\n",
-    "  - screen_size_raw<br>\n",
-    "- Benennen Sie die Spalten der neuen Variablen als (in Klammern ist der Datentyp angegeben):\n",
-    "  - price (int64)\n",
-    "  - camera_resolution (int64)\n",
-    "  - battery_life (int64)\n",
-    "  - storage_size (int64)\n",
-    "  - screen_size (float64)\n",
+    "  - frame_size_raw\n",
+    "  - wheel_size_raw<br>\n",
+    "- Benennen Sie die Spalten der neuen Variablen folgendermassen (in Klammern ist der Datentyp angegeben):\n",
+    "  - price (Int64)\n",
+    "  - gear_count (Int64)\n",
+    "  - battery_life (Int64)\n",
+    "  - frame_size (Int64)\n",
+    "  - wheel_size (Float64)\n",
     "- Stellen Sie ein Subset des DataFrames nur mit den neuen Spalten und den ersten 5 Zeilen im Jupyter Notebook dar.<br><br>\n",
-    "- Die folgenden regular expressions sind eine Hilfestellung zum Lösen der Aufgabe:<br>\n",
+    "\n",
+    "- Tipp: Die folgenden Code Zeilen inkl. regular expressions sind eine Hilfestellung zum Lösen der Aufgabe:\n",
     "  ```python\n",
-    "  \"CHF\\s*(\\d+)\\.-\"\n",
-    "  \"(\\d+)\\s*MP\"\n",
-    "  \"(\\d+)\\s*hrs\"\n",
-    "  \"(\\d+)\\s*GB\"\n",
-    "  \"(\\d+\\.\\d+)\\s*IN\"\n",
+    "    d1 = re.findall(\"CHF\\s*(\\d+)\\.-\", i)\n",
+    "    d1 = re.findall(\"(\\d+)\\s*Gänge\", i)\n",
+    "    d1 = re.findall(\"(\\d+)\\s*km\", str(i))\n",
+    "    d1 = re.findall(\"(\\d+)\\s*cm\", i)\n",
+    "    d1 = re.findall(\"(\\d+(?:[.,]\\d+)?)\", i)\n",
     "  ```\n",
+    "- Gross- und Kleinschreibung beim Abspeichern als neue Variable beachten, z.B.:\n",
+    "  - df['my_int_var'] = pd.Series(my_int_var, dtype=\"Int64\") -> kann mit NAs umgehen\n",
+    "  - df['my_float_var'] = pd.Series(my_float_var, dtype=\"Float64\") -> kann mit NAs umgehen\n",
     "  \n",
     "<b style=\"color: gray;\">(max. erreichbare Punkte: 8)</b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d904b27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extrahieren der numerischen Werte aus 'price_raw' und speichern in separaten Variablen\n",
+    "\n",
+    "\n",
+    "# Save as new variable in the pandas data frame\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "875ba6fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extrahieren der numerischen Werte aus 'gear_count_raw' und speichern in separaten Variablen\n",
+    "\n",
+    "\n",
+    "# Save as new variable in the pandas data frame\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b296dd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extrahieren der numerischen Werte aus 'battery_life_raw' und speichern in separaten Variablen\n",
+    "\n",
+    "\n",
+    "# Save as new variable in the pandas data frame\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a66c81e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extrahieren der numerischen Werte aus 'frame_size_raw' und speichern in separaten Variablen\n",
+    "\n",
+    "\n",
+    "# Save as new variable in the pandas data frame\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d4ce6d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extrahieren der numerischen Werte aus 'wheel_size_raw' und speichern in separaten Variablen (Tipp: floating point anstatt integer Variable)\n",
+    "\n",
+    "\n",
+    "# Save as new variable in the pandas data frame\n",
+    "\n"
    ]
   },
   {
@@ -276,57 +350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extrahieren der numerischen Werte aus 'price_raw' und speichern in separaten Variablen\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d4d7f5b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Extrahieren der numerischen Werte aus 'camera_resolution_raw' und speichern in separaten Variablen\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "229d19cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Extrahieren der numerischen Werte aus 'battery_life_raw' und speichern in separaten Variablen\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "06f3b7d0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Extrahieren der numerischen Werte aus 'storage_size_raw' und speichern in separaten Variablen\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b661e5dc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Extrahieren der numerischen Werte aus 'screen_size_raw' und speichern in separaten Variablen (Tipp: float64 statt int64)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "387f8a7a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Anzeigen Subset des DataFrames nur mit den neuen Variablen und den ersten 5 Zeilen\n"
+    "# Anzeigen des DataFrames nur mit den neuen Variablen und den ersten 5 Zeilen\n"
    ]
   },
   {
@@ -336,7 +360,7 @@
    "source": [
     "#### <b>Aufgabe (3): Erstellen Sie statistische Kennzahlen zu den numerischen Variablen im DataFrame.</b>\n",
     "<b>Details zur Aufgabenstellung:</b>\n",
-    "- Berechnen Sie die statistische Kennzahlen für die Variablen 'price', 'camera_resolution', 'battery_life', 'storage_size', 'screen_size'.\n",
+    "- Berechnen Sie die statistischen Kennzahlen für die folgenden numerischen Variablen im DataFrame: price,\tgear_count, battery_life,\tframe_size,\twheel_size.\n",
     "- Die statistische Kennzahlen, welche berechnet werden sollen sind (engl. Bezeichnungen): \n",
     "  - Count\n",
     "  - Mean\n",
@@ -349,7 +373,9 @@
     "  - Skewness\n",
     "- Stellen Sie die berechneten statistische Kennzahlen im Jupyter Notebook dar (es können auch verschiedene Ergebnistabellen angezeigt werden).<br><br>\n",
     "\n",
-    "- Tipp: Nicht alle Python - Methoden verwenden automatisch nur die numerischen Variablen. In diesen Fällen muss ein Subset der numerischen Variablen erstellt werden.\n",
+    "- Tipp: \n",
+    "  - Nicht alle Python - Methoden verwenden automatisch nur die numerischen Variablen. \n",
+    "  - In diesen Fällen muss ein Subset mit den Spalten der numerischen Variablen erstellt werden und die Statistiken für dieses Subset berechnet werden.\n",
     "\n",
     "<b style=\"color: gray;\">(max. erreichbare Punkte: 4)</b>"
    ]
@@ -362,9 +388,12 @@
    "outputs": [],
    "source": [
     "# Einlesen der aufbereiteten Daten (damit alle auf dem gleichen Stand sind)\n",
-    "engine = create_engine('sqlite:///./Data/smartphone_data_prepared.db')\n",
-    "df = pd.read_sql_query(\"\"\"SELECT * FROM smartphone_data_prepared\"\"\", con=engine)\n",
+    "engine = create_engine('sqlite:///./Data/bicycle_data_prepared.db')\n",
+    "df = pd.read_sql_query(\"\"\"SELECT * FROM bicycle_data_prepared\"\"\", con=engine)\n",
     "engine.dispose()\n",
+    "\n",
+    "# Columns der relevanten numerischen Variablen auswählen\n",
+    "\n",
     "\n",
     "# Berechnung der statistischen Kennzahlen der numerischen Spalten in 'df'\n",
     "\n",
@@ -380,7 +409,7 @@
     "#### <b>Aufgabe (4): Erstellen Sie eine Pivot-Tabelle mit den Mittwelwerten der numerischen Variablen pro Hersteller.</b>\n",
     "<b>Details zur Aufgabenstellung:</b>\n",
     "- Die Angabe zum Hersteller finden Sie in der Variable 'make'.\n",
-    "- Verwenden Sie die für die Mittelwertsberechnung die Variablen 'price', 'camera_resolution', 'battery_life', 'storage_size', 'screen_size'.\n",
+    "- Verwenden Sie die für die Mittelwertsberechnung die Variablen 'price', 'gear_count','frame_size' und 'wheel_size'.\n",
     "- Stellen Sie die Pivot-Tabelle im Jupyter Notebook dar.\n",
     "\n",
     "<b style=\"color: gray;\">(max. erreichbare Punkte: 4)</b>"
@@ -411,7 +440,7 @@
     "- Fügen Sie der Graphik ein Gitternetz (engl.: grid) hinzu.\n",
     "- Zeigen Sie das Histogramm im Jupyter Notebook an. \n",
     "\n",
-    "<b style=\"color: gray;\">(max. erreichbare Punkte: 8)</b>"
+    "<b style=\"color: gray;\">(max. erreichbare Punkte: 4)</b>"
    ]
   },
   {
@@ -421,7 +450,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Erstellen, Beschriften und Anzeigen des Histogramms\n"
+    "# Erstellen des Histogramms\n",
+    "\n",
+    "\n",
+    "# Beschriftung der Achsen und Hinzufügen des Titels\n",
+    "\n",
+    "\n",
+    "# Hinzufügen des Grids\n",
+    "\n",
+    "\n",
+    "# Anzeigen der Graphik\n"
    ]
   },
   {
@@ -429,14 +467,18 @@
    "id": "08bd20f4",
    "metadata": {},
    "source": [
-    "#### <b>Aufgabe (6): Erstellen Sie einen gruppierten Boxplot mit den Preisen pro Hersteller.</b>\n",
+    "#### <b>Aufgabe (6): Erstellen Sie einen gruppierten Boxplot mit den Preisen pro Hersteller nur für die E-Bikes.</b>\n",
     "<b>Details zur Aufgabenstellung: </b>\n",
+    "- Erstellen Sie ein Subset der Daten nur mit E-Bikes.\n",
+    "- Die Information, ob es sich um ein E-Bike handelt finden Sie in der Spalte 'is_ebike' (0 = 'kein E-Bike', 1 = 'E-Bike').\n",
     "- Verwenden Sie die Python Library seaborn für die Erstellung des gruppieren Boxplots.\n",
     "- Die Angabe zum Hersteller (=Gruppierungsvariable) finden Sie in der Variable 'make'.\n",
     "- Beschriften Sie die Achsen und geben Sie der Graphik einen Titel.\n",
     "- Stellen Sie den gruppierten Boxplot im Jupyter Notebook dar.<br><br>\n",
     "\n",
-    "- Tipp: Für die Erstellung des gruppierten Boxplots können Sie Vorlagen aus der seaborn - Hilfe verwenden (vgl. Abschnitt: 'Group by a categorical variable ...'):<br><br>\n",
+    "- Tipp: \n",
+    "- Ein Subset mit den E-Bikes kann mit Hilfe von df[df['is_ebike'] == 1] erstellt werden.\n",
+    "- Für die Erstellung des gruppierten Boxplots können Sie Vorlagen aus der seaborn - Hilfe verwenden (vgl. Abschnitt: 'Group by a categorical variable ...'):<br><br>\n",
     "  https://seaborn.pydata.org/generated/seaborn.boxplot.html\n",
     "\n",
     "\n",
@@ -450,7 +492,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Erstellen, Beschriften und Anzeigen des gruppierten Boxplots\n"
+    "# Subset der Daten nur mit E-Bikes erstellen\n",
+    "\n",
+    "\n",
+    "# Erstellen, Beschriften und Anzeigen eines gruppierten Boxplots der Preise pro Hersteller\n"
    ]
   },
   {
@@ -458,13 +503,17 @@
    "id": "d67e3225",
    "metadata": {},
    "source": [
-    "#### <b>Aufgabe (7): Erstellen Sie ein Barchart mit der Anzahl Smartphones pro Hersteller.</b>\n",
+    "#### <b>Aufgabe (7): Erstellen Sie ein Barchart mit der Anzahl Bikes pro Hersteller für alle Bikes, welche <u>keine</u> E-Bikes sind.</b>\n",
     "<b>Details zur Aufgabenstellung:</b>\n",
+    "- Erstellen Sie ein Subset der Daten nur mit den Bikes, welche keine E-Bikes sind.\n",
+    "- Die Information, ob es sich um ein E-Bike handelt finden Sie in der Spalte 'is_ebike' (0 = 'kein E-Bike', 1 = 'E-Bike').\n",
     "- Ergänzen Sie den Python Code unten dort wo notwendig.\n",
     "- Die Angabe zum Hersteller finden Sie in der Variable 'make'.\n",
-    "- Im Barchart müssen die Hersteller auf der vertikalen und die Anzahl Smartphones auf der horizontalen Achse abgebildet sein.\n",
-    "- Im Barchart müssen die Anzahl Smartphones pro Hersteller der Grösse nach absteigend sortiert sein.\n",
-    "- Beschriften Sie die Achsen des Barcharts und geben Sie dem Barchart einen Titel.<br><br>\n",
+    "- Im Barchart müssen die Hersteller auf der vertikalen und die Anzahl Bikes auf der horizontalen Achse abgebildet sein.\n",
+    "- Im Barchart müssen die Anzahl Bikes pro Hersteller der Grösse nach absteigend sortiert sein.\n",
+    "- Beschriften Sie die Achsen des Barcharts und geben Sie dem Barchart einen Titel.\n",
+    "\n",
+    "Tipp: Ein Subset mit den Bikes, welche keine E-Bikes sind, kann mit Hilfe von df[df['is_ebike'] == 0] erstellt werden.\n",
     "\n",
     "<b style=\"color: gray;\">(max. erreichbare Punkte: 8)</b>"
    ]
@@ -476,8 +525,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gruppierung der Daten nach 'make' und Berechnung der Anzahl Smartphones\n",
-    "df_bar = df['make'].value_counts().sort_values(ascending=True)\n",
+    "# Subset der Daten nur mit den Bikes, welche keine E-Bikes sind\n",
+    "\n",
+    "\n",
+    "# Gruppierung der Daten nach 'make' und Berechnung der Anzahl Bikes pro Hersteller\n",
+    "df_bar = df_no_ebike['make'].value_counts().sort_values(ascending=True)\n",
     "\n",
     "# Zusammenstellen der Werte für den Barchart\n",
     "napart = list(df_bar.values)\n",
@@ -488,37 +540,6 @@
     "\n",
     "\n",
     "# Anzeigen der Graphik\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "51ec75c6",
-   "metadata": {},
-   "source": [
-    "#### <b>Aufgabe (8): Erstellen Sie eine Correlation-Heatmap auf der Basis der numerischen Variablen.</b>\n",
-    "<b>Details zur Aufgabenstellung:</b>\n",
-    "- Verwenden Sie die Variablen 'price', 'camera_resolution', 'battery_life', 'storage_size', 'screen_size'.\n",
-    "- Berechnen Sie auf zwei Nachkommastellen gerundete Korrelationskoeffizienten als Basis für die Correlation-Matrix und -Heatmap.\n",
-    "- Stellen Sie die Correlation-Matrix im Jupyter Notebook dar.\n",
-    "- Stellen Sie die Correlation-Heatmap im Jupyter Notebook dar.\n",
-    "\n",
-    "<b style=\"color: gray;\">(max. erreichbare Punkte: 8)</b>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7592f8ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Erstellen Correlation-Matrix numerischen Variablen\n",
-    "\n",
-    "\n",
-    "# Erstellen der Heatmap aus Correlation-Matrix\n",
-    "\n",
-    "\n",
-    "# Anzeigen der Graphik"
    ]
   },
   {
